--- a/package.json
+++ b/package.json
@@ -14,9 +14,11 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.7.7",
     "dotenv": "^16.4.5",
+    "js-image-zoom": "^0.7.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-redux": "^9.1.2",
+    "react-router-dom": "^6.26.2",
     "react-scripts": "5.0.1",
     "redux-thunk": "^3.1.0",
     "web-vitals": "^2.1.4"
